Put header links into their own flex box to use gap instead of margin to make sure links are in line with image below

--- a/styles.css
+++ b/styles.css
@@ -42,10 +42,13 @@ header a{
     font-weight: 800;
     color: #F9FAF8;
 }
+.header-link-group{
+    display: flex;
+    gap:20px;
+}
 .header-link{
     font-size:18px;
     color: #E5E7EB;
-    margin-right: 20px;
 }
         /* hero */
 .hero-wrapper{
